--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>united styles</title>
-  <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdn.rawgit.com/franzwilding/united-styles/master/build/united.css" />
 </head>
 <body>
@@ -33,7 +33,7 @@
   <section class="united-container">
     <div class="united-br"></div>
     <div class="united-br"></div>
-    <h1>United styles 0.0.2</h1>
+    <h1>United styles 0.0.5</h1>
     <div class="united-hr"></div>
   </section>
 </div>
