add baseurl in config

--- a/global/tabbar.html
+++ b/global/tabbar.html
@@ -4,7 +4,7 @@ layout: global
 ---
 <nav class="united-tabbar">
   <ol>
-    <li><a href="/"><i class="icon ion-android-arrow-back"></i>Back</a></li>
+    <li><a href="{{ site.baseurl }}/"><i class="icon ion-android-arrow-back"></i>Back</a></li>
     <li class="active"><a href="#"><i class="icon ion-earth"></i>Tab 2</a></li>
     <li><a href="#"><i class="icon ion-person"></i>Tab 3</a></li>
   </ol>
