fix tabor back button

--- a/global/tabbar.html
+++ b/global/tabbar.html
@@ -1,7 +1,10 @@
 ---
 title: Tabbar
-layout: global
 ---
+<!DOCTYPE html>
+<html lang="en">
+{% include head.html %}
+<body>
 <nav class="united-tabbar">
   <ol>
     <li><a href="{{ site.baseurl }}/"><i class="icon ion-android-arrow-back"></i>Back</a></li>
@@ -50,3 +53,6 @@ layout: global
   </div>
 </div>
 </div>
+{% include footer.html %}
+</body>
+</html>
