--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ title: Start
 <body>
 {% include menu.html %}
 <div>
+  <a class="united-sidebar-toggler fixed top right" style="margin: 11px 6px;" href="#"><span>Toggle menu</span></a>
   <section class="united-container">
     <div class="united-br"></div>
     <div class="united-br"></div>
