Start updating docs according to changes.

--- a/elements/layout.html
+++ b/elements/layout.html
@@ -4,48 +4,48 @@ layout: page
 ---
 <h4>Container</h4>
 <p>Wrapper with max-width, auto margin left and right and padding. As an example, see the container of this page. You can also add the class <strong>responsive-padding</strong> to make it full width on small devices and add 20px padding to each side of side container on wider devices.</p>
-<div class="united-row">
+<div class="row">
   <pre><code data-language="html">
-<div class="united-container"><h2>Content</h2></div>
+<div class="container"><h2>Content</h2></div>
   </code></pre>
   <pre><code data-language="html">
-<div class="united-container responsive-padding"><h2>Responsive padding content</h2></div>
+<div class="container responsive-padding"><h2>Responsive padding content</h2></div>
   </code></pre>
 </div>
 
 <h4>Grid</h4>
 <p>12-column grid.</p>
-<div class="united-row">
+<div class="row">
   <pre class="width-8"><code data-language="html">
-<div class="united-row">
+<div class="row">
   <div class="width-4">1</div>
   <div class="width-4">2</div>
   <div class="width-4">3</div>
 </div>
   </code></pre>
   <div class="width-4">
-    <div class="united-row">
-      <div class="width-4"><div class="united-message">4</div></div>
-      <div class="width-4"><div class="united-message">4</div></div>
-      <div class="width-4"><div class="united-message">4</div></div>
+    <div class="row">
+      <div class="width-4"><div class="message">4</div></div>
+      <div class="width-4"><div class="message">4</div></div>
+      <div class="width-4"><div class="message">4</div></div>
     </div>
-    <div class="united-row">
-      <div class="width-3"><div class="united-message">3</div></div>
-      <div class="width-4"><div class="united-message">4</div></div>
-      <div class="width-5"><div class="united-message">5</div></div>
+    <div class="row">
+      <div class="width-3"><div class="message">3</div></div>
+      <div class="width-4"><div class="message">4</div></div>
+      <div class="width-5"><div class="message">5</div></div>
     </div>
-    <div class="united-row">
-      <div class="width-2"><div class="united-message">2</div></div>
-      <div class="width-4"><div class="united-message">4</div></div>
-      <div class="width-6"><div class="united-message">6</div></div>
+    <div class="row">
+      <div class="width-2"><div class="message">2</div></div>
+      <div class="width-4"><div class="message">4</div></div>
+      <div class="width-6"><div class="message">6</div></div>
     </div>
-    <div class="united-row">
-      <div class="width-1"><div class="united-message">1</div></div>
-      <div class="width-1"><div class="united-message">1</div></div>
-      <div class="width-1"><div class="united-message">1</div></div>
-      <div class="width-2"><div class="united-message">2</div></div>
-      <div class="width-3"><div class="united-message">3</div></div>
-      <div class="width-4"><div class="united-message">4</div></div>
+    <div class="row">
+      <div class="width-1"><div class="message">1</div></div>
+      <div class="width-1"><div class="message">1</div></div>
+      <div class="width-1"><div class="message">1</div></div>
+      <div class="width-2"><div class="message">2</div></div>
+      <div class="width-3"><div class="message">3</div></div>
+      <div class="width-4"><div class="message">4</div></div>
     </div>
   </div>
 </div>
