--- a/elements/typography.html
+++ b/elements/typography.html
@@ -3,7 +3,7 @@ title: Typography
 layout: page
 ---
 <h4>Headlines</h4>
-<div class="united-row">
+<div class="row">
   <pre class="width-6"><code data-language="html">
 <h1>Headline 1</h1>
 <h2>Headline 2</h2>
@@ -23,7 +23,7 @@ layout: page
 </div>
 
 <h4>Paragraph</h4>
-<div class="united-row">
+<div class="row">
   <pre class="width-6"><code data-language="html">
 <p>Lorem ipsum <a href="#">Stet clita kasd</a> ...</p>
 <p>Lorem ipsum <a href="#">Stet clita kasd</a> ...</p>
