--- a/elements/util.html
+++ b/elements/util.html
@@ -3,29 +3,29 @@ title: Utilities
 layout: page
 ---
 <h4>Horizontal ruler</h4>
-<div class="united-row">
+<div class="row">
   <pre class="width-6"><code data-language="html">
 <p>Lorem Ipsum</p>
-<div class="united-hr"></div>
+<div class="hr"></div>
 <p>Lorem Ipsum</p>
   </code></pre>
   <div class="width-6">
     <p>Lorem Ipsum</p>
-    <div class="united-hr"></div>
+    <div class="hr"></div>
     <p>Lorem Ipsum</p>
   </div>
 </div>
 
 <h4>Break</h4>
-<div class="united-row">
+<div class="row">
   <pre class="width-6"><code data-language="html">
 <p>Lorem Ipsum</p>
-<div class="united-br"></div>
+<div class="br"></div>
 <p>Lorem Ipsum</p>
   </code></pre>
   <div class="width-6">
     <p>Lorem Ipsum</p>
-    <div class="united-br"></div>
+    <div class="br"></div>
     <p>Lorem Ipsum</p>
   </div>
 </div>
