--- a/global/tabbar.html
+++ b/global/tabbar.html
@@ -5,7 +5,7 @@ title: Tabbar
 <html lang="en">
 {% include head.html %}
 <body>
-<nav class="united-tabbar">
+<nav class="tabbar">
   <ol>
     <li><a href="{{ site.baseurl }}/"><i class="icon ion-android-arrow-back"></i>Back</a></li>
     <li class="active"><a href="#"><i class="icon ion-earth"></i>Tab 2</a></li>
@@ -13,16 +13,16 @@ title: Tabbar
   </ol>
 </nav>
 
-<div class="united-br"></div>
+<div class="br"></div>
 
-<div class="united-container">
+<div class="container">
 
   <h1>Tabbar</h1>
-  <div class="united-hr"></div>
+  <div class="hr"></div>
 
-  <div class="united-row">
+  <div class="row">
   <pre class="width-6"><code data-language="html">
-<nav class="united-tabbar">
+<nav class="tabbar">
   <ol>
     <li><a><i class="icon"></i>Tab 1</a></li>
     <li class="active"><a><i class="icon"></i>Tab 2</a></li>
@@ -36,20 +36,20 @@ title: Tabbar
 </div>
 
 <h4>Fixed</h4>
-<div class="united-row">
+<div class="row">
   <pre class="width-6"><code data-language="html">
-<nav class="united-tabbar fixed top">
+<nav class="tabbar fixed top">
   <ol>
     <li><a><i class="icon"></i>Tab 1</a></li>
     <li><a><i class="icon"></i>Tab 2</a></li>
     <li><a><i class="icon"></i>Tab 3</a></li>
   </ol>
 </nav>
-<div class="united-tabbar-space"></div>
+<div class="tabbar-space"></div>
 <p>Content...</p>
   </code></pre>
   <div class="width-6">
-    <p>Add a <strong>.fixed</strong> class and one position class (<strong>.top</strong> or <strong>.bottom</strong>) to fix the tabbar. You can use the <strong>.united-tabbar-space</strong> element that has the exact same height as the tabbar element to avoid space issues with fixed elements.</p>
+    <p>Add a <strong>.fixed</strong> class and one position class (<strong>.top</strong> or <strong>.bottom</strong>) to fix the tabbar. You can use the <strong>.tabbar-space</strong> element that has the exact same height as the tabbar element to avoid space issues with fixed elements.</p>
   </div>
 </div>
 </div>
