--- a/elements/button.html
+++ b/elements/button.html
@@ -2,144 +2,201 @@
 title: Button
 layout: page
 ---
-<h4>Basic buttons</h4>
-<div class="united-row">
-  <pre class="width-8"><code data-language="html">
-<a class="united-button">Button</a>
-<a class="united-button small">Small button</a>
-  </code></pre>
-  <div class="width-4">
-    <p><a class="united-button">Button</a></p>
-    <p><a class="united-button small">Small button</a></p>
-  </div>
-</div>
+<h2>Basic buttons</h2>
+<div class="br"></div>
+<p class="buttons">
+  <a class="button mini">Mini Button</a>
+  <a class="button small">Small Button</a>
+  <a class="button">Button</a>
+  <a class="button big">Big Button</a>
+</p>
+<pre><code data-language="html">
+<a class="button mini">Mini Button</a>
+<a class="button small">Small Button</a>
+<a class="button">Button</a>
+<a class="button big">Big Button</a>
 
-<h4>Icons</h4>
-<div class="united-row">
-  <pre class="width-8"><code data-language="html">
-<a class="united-button"><i class="icon ion-heart"></i></a>
-<a class="united-button"><i class="icon ion-heart"></i> Icon</a>
-  </code></pre>
-  <div class="width-4">
-    <p><a class="united-button"><i class="icon ion-heart"></i></a></p>
-    <p><a class="united-button"><i class="icon ion-heart"></i> Icon</a></p>
-  </div>
-</div>
-<div class="united-row">
-  <pre class="width-8"><code data-language="html">
-<a class="united-button icon-left"><i class="icon ion-heart"></i> Right</a>
-<a class="united-button icon-right"><i class="icon ion-heart"></i> Left</a>
-  </code></pre>
-  <div class="width-4">
-    <p><a class="united-button icon-left"><i class="icon ion-heart"></i> Right</a></p>
-    <p><a class="united-button icon-right"><i class="icon ion-heart"></i> Left</a></p>
-  </div>
-</div>
+</code></pre>
+<div class="br"></div>
 
-<h4>Width</h4>
-<div class="united-row">
-  <pre class="width-8"><code data-language="html">
-<a class="united-button full-width">Full width</a>
-<a class="united-button auto-width">Auto width</a>
-<a class="united-button auto-width"><i class="icon ion-heart"></i></a>
-  </code></pre>
-  <div class="width-4">
-    <p><a class="united-button full-width">Full width</a></p>
-    <p>
-      <a class="united-button auto-width">Auto width</a>
-      <a class="united-button auto-width"><i class="icon ion-heart"></i></a>
-    </p>
-  </div>
-</div>
 
+<div class="hr"></div><div class="br"></div>
+<h2>Icons</h2>
+<div class="br"></div>
+<p class="buttons">
+  <a class="button"><i class="icon ion-heart"></i></a>
+  <a class="button"><i class="icon ion-heart"></i> Button</a>
+  <a class="button icon-left"><i class="icon ion-heart"></i> Button</a>
+  <a class="button icon-right"><i class="icon ion-heart"></i> Button</a>
+</p>
+<pre><code data-language="html">
+  <a class="button"><i class="icon ion-heart"></i></a>
+  <a class="button"><i class="icon ion-heart"></i> Button</a>
+  <a class="button icon-left"><i class="icon ion-heart"></i> Button</a>
+  <a class="button icon-right"><i class="icon ion-heart"></i> Button</a>
+
+</code></pre>
+<div class="br"></div>
+
+
+<div class="hr"></div><div class="br"></div>
+<h2>Width</h2>
+<div class="br"></div>
+<p class="buttons"><a class="button full-width">Full width</a></p>
+<p class="buttons">
+  <a class="button auto-width">Auto width</a>
+  <a class="button auto-width"><i class="icon ion-heart"></i></a>
+  <a class="button square-width"><i class="icon ion-heart"></i></a>
+</p>
+<pre><code data-language="html">
+  <a class="button full-width">Full width</a>
+  <a class="button auto-width">Auto width</a>
+  <a class="button auto-width"><i class="icon ion-heart"></i></a>
+  <a class="button square-width"><i class="icon ion-heart"></i></a> (width=height)
+
+</code></pre>
+<div class="br"></div>
+
+
+<div class="hr"></div><div class="br"></div>
+<h2>Variations</h2>
+<div class="br"></div>
+<p class="buttons">
+  <a class="button rounded">Rounded</a>
+  <a class="button full">Full</a>
+  <a class="button borderless">Borderless</a>
+  <a class="button borderless full">Borderless Full</a>
+  <a class="button rounded auto-width"><i class="icon ion-heart"></i></a>
+  <a class="button rounded square-width"><i class="icon ion-heart"></i></a>
+</p>
+<pre><code data-language="html">
+  <a class="button rounded">Rounded</a>
+  <a class="button full">Full</a>
+  <a class="button borderless">Borderless</a>
+  <a class="button borderless full">Borderless Full</a>
+  <a class="button rounded auto-width"><i class="icon ion-heart"></i></a>
+  <a class="button rounded square-width"><i class="icon ion-heart"></i></a>
+
+</code></pre>
+<div class="br"></div>
+
+
+<div class="hr"></div><div class="br"></div>
 <h4>Colors</h4>
-<div class="united-row">
-  <pre class="width-8"><code data-language="html">
-<a class="united-button">Default</a>
-<a class="united-button main">Main</a>
-<a class="united-button positive">Positive</a>
-<a class="united-button negative">Negative</a>
-<a class="united-button grey">Grey</a>
-<a class="united-button grey-dark">Grey dark</a>
-<a class="united-button grey-dark2">Grey dark 2</a>
-<a class="united-button gold">Gold</a>
-  </code></pre>
-  <div class="width-4">
-    <p class="united-buttons">
-      <a class="united-button auto-width">Default</a>
-      <a class="united-button main auto-width">Main</a>
-      <a class="united-button positive auto-width">Positive</a>
-      <a class="united-button negative auto-width">Negative</a>
-      <a class="united-button grey auto-width">Grey</a>
-      <a class="united-button grey-dark auto-width">Grey dark</a>
-      <a class="united-button grey-dark2 auto-width">Grey dark 2</a>
-      <a class="united-button gold auto-width">Gold</a>
-    </p>
-  </div>
-</div>
+<h5>Default (border only) </h5>
+<p class="buttons">
+    <a class="button">Default</a>
+    <a class="button white">White</a>
+    <a class="button grey">Grey</a>
+    <a class="button grey-light">Grey Light</a>
+    <a class="button grey-light2">Grey Light 2</a>
+    <a class="button grey-dark">Grey Dark</a>
+    <a class="button grey-dark2">Grey Dark 2</a>
+    <a class="button green">Green</a>
+    <a class="button red">Red</a>
+    <a class="button red-light">Red Light</a>
+    <a class="button gold">Gold</a>
+    <a class="button blue">Blue</a>
+    <a class="button blue-dark">Blue Dark</a>
+    <a class="button blue-dark2">Blue Dark 2</a>
+    <a class="button black">Black</a>
+</p>
+<h5>Full</h5>
+<p class="buttons">
+    <a class="button full">Default</a>
+    <a class="button full white">White</a>
+    <a class="button full grey">Grey</a>
+    <a class="button full grey-light">Grey Light</a>
+    <a class="button full grey-light2">Grey Light 2</a>
+    <a class="button full grey-dark">Grey Dark</a>
+    <a class="button full grey-dark2">Grey Dark 2</a>
+    <a class="button full green">Green</a>
+    <a class="button full red">Red</a>
+    <a class="button full red-light">Red Light</a>
+    <a class="button full gold">Gold</a>
+    <a class="button full blue">Blue</a>
+    <a class="button full blue-dark">Blue Dark</a>
+    <a class="button full blue-dark2">Blue Dark 2</a>
+    <a class="button full black">Black</a>
+</p>
+<h5>Borderless</h5>
+<p class="buttons">
+  <a class="button borderless"><i class="icon ion-heart"></i></a>
+  <a class="button full red-gradient borderless">Red gradient</a>
+</p>
+<pre><code data-language="html">
+  <a class="button blue-dark2">Blue Dark 2</a>
+  <a class="button full blue-dark2">Blue Dark 2</a>
+  <a class="button borderless"><i class="icon ion-heart"></i></a>
+  <a class="button full red-gradient borderless">Red gradient</a>
 
+</code></pre>
+<div class="br"></div>
+
+
+<div class="hr"></div><div class="br"></div>
 <h4>Buttons group</h4>
-<div class="united-row">
-  <pre class="width-8"><code data-language="html">
-<p class="united-buttons">
-  <a class="united-button small auto-width">Button</a>
-  <a class="united-button small auto-width">Button</a>
-  <a class="united-button small auto-width">Button</a>
-</p>
-  </code></pre>
+<div class="row">
   <div class="width-4">
-    <p class="united-buttons">
-      <a class="united-button small auto-width">Button</a>
-      <a class="united-button small auto-width">Button</a>
-      <a class="united-button small auto-width">Button</a>
-    </p>
+    <h5>.buttons.centered</h5>
+    <div class="box">
+      <p class="buttons centered">
+        <a class="button auto-width">Button</a>
+        <a class="button auto-width">Button</a>
+        <a class="button auto-width">Button</a>
+      </p>
+    </div>
+  </div>
+  <div class="width-4">
+    <h5>.buttons.left</h5>
+    <div class="box">
+      <p class="buttons left">
+        <a class="button auto-width">Button</a>
+        <a class="button auto-width">Button</a>
+        <a class="button auto-width">Button</a>
+      </p>
+    </div>
+  </div>
+  <div class="width-4">
+    <h5>.buttons.right</h5>
+    <div class="box">
+      <p class="buttons right">
+        <a class="button auto-width">Button</a>
+        <a class="button auto-width">Button</a>
+        <a class="button auto-width">Button</a>
+      </p>
+    </div>
   </div>
 </div>
-<div class="united-row">
-  <pre class="width-8"><code data-language="html">
-<p class="united-buttons left">
-  <a class="united-button small auto-width">Button</a>
-  <a class="united-button small auto-width">Button</a>
-  <a class="united-button small auto-width">Button</a>
-</p>
-  </code></pre>
+<div class="row">
   <div class="width-4">
-    <p class="united-buttons left">
-      <a class="united-button small auto-width">Button</a>
-      <a class="united-button small auto-width">Button</a>
-      <a class="united-button small auto-width">Button</a>
-    </p>
+    <h5>.buttons.no-padding</h5>
+    <div class="box">
+      <p class="buttons no-padding">
+        <a class="button auto-width">Button</a>
+        <a class="button auto-width">Button</a>
+        <a class="button auto-width">Button</a>
+      </p>
+    </div>
+    <p class="small">Use <em>.no-padding</em> to remove margin on first and last button.</p>
+  </div>
+  <div class="width-4">
+    <h5>.buttons.no-wrap</h5>
+    <div class="box">
+      <p class="buttons no-wrap">
+        <a class="button auto-width">Button</a>
+        <a class="button auto-width">Button</a>
+        <a class="button auto-width">Button</a>
+      </p>
+    </div>
+    <p class="small">Use <em>.no-wrap</em> to prevent the buttons to wrap.</p>
   </div>
 </div>
-<div class="united-row">
-  <pre class="width-8"><code data-language="html">
-<p class="united-buttons right">
-  <a class="united-button small auto-width">Button</a>
-  <a class="united-button small auto-width">Button</a>
-  <a class="united-button small auto-width">Button</a>
-</p>
-  </code></pre>
-  <div class="width-4">
-    <p class="united-buttons right">
-      <a class="united-button small auto-width">Button</a>
-      <a class="united-button small auto-width">Button</a>
-      <a class="united-button small auto-width">Button</a>
-    </p>
-  </div>
-</div>
-<div class="united-row">
-  <pre class="width-8"><code data-language="html">
-<p class="united-buttons centered">
-  <a class="united-button small auto-width">Button</a>
-  <a class="united-button small auto-width">Button</a>
-  <a class="united-button small auto-width">Button</a>
-</p>
-  </code></pre>
-  <div class="width-4">
-    <p class="united-buttons centered">
-      <a class="united-button small auto-width">Button</a>
-      <a class="united-button small auto-width">Button</a>
-      <a class="united-button small auto-width">Button</a>
-    </p>
-  </div>
-</div>
+<div class="br"></div>
+<pre><code data-language="html">
+  <p class="buttons"> <a class="button">Button</a><a class="button">Button</a> </p>
+  <p class="buttons left"> <a class="button">Button</a><a class="button">Button</a> </p>
+  <p class="buttons right"> <a class="button">Button</a><a class="button">Button</a> </p>
+  <p class="buttons centered"> <a class="button">Button</a><a class="button">Button</a> </p>
+
+</code></pre>
