--- a/elements/item.html
+++ b/elements/item.html
@@ -4,60 +4,60 @@ layout: page
 ---
 <h4>Item</h4>
 <pre><code data-language="html">
-  <div class="united-item">
+  <div class="item">
     <div>
       <h2>Headline</h2>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua...</p>
     </div>
-    <div class="united-buttons">
-      <a class="united-button mini icon-left main"><i class="icon ion-wrench"></i> Edit</a>
-      <a class="united-button mini icon-left negative"><i class="icon ion-close"></i> Delete</a>
+    <div class="buttons">
+      <a class="button mini icon-left main"><i class="icon ion-wrench"></i> Edit</a>
+      <a class="button mini icon-left negative"><i class="icon ion-close"></i> Delete</a>
     </div>
   </div>
-  <div class="united-item-meta">
+  <div class="item-meta">
     <p>Aktiv | Last update on 16. September 2015 | 25 comments</p>
   </div>
 </code></pre>
 
-<div class="united-item">
+<div class="item">
   <div>
     <h2>Headline</h2>
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua...</p>
   </div>
-  <div class="united-buttons">
-    <a class="united-button mini icon-left main"><i class="icon ion-wrench"></i> Edit</a>
-    <a class="united-button mini icon-left negative"><i class="icon ion-close"></i> Delete</a>
+  <div class="buttons">
+    <a class="button mini icon-left main"><i class="icon ion-wrench"></i> Edit</a>
+    <a class="button mini icon-left negative"><i class="icon ion-close"></i> Delete</a>
   </div>
 </div>
-<div class="united-item-meta">
+<div class="item-meta">
   <p>Aktiv | Last update on 16. September 2015 | 25 comments</p>
 </div>
 
-<div class="united-item">
+<div class="item">
   <div>
     <h2>Headline</h2>
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua...</p>
   </div>
-  <div class="united-buttons">
-    <a class="united-button mini icon-left main"><i class="icon ion-wrench"></i> Edit</a>
-    <a class="united-button mini icon-left negative"><i class="icon ion-close"></i> Delete</a>
+  <div class="buttons">
+    <a class="button mini icon-left main"><i class="icon ion-wrench"></i> Edit</a>
+    <a class="button mini icon-left negative"><i class="icon ion-close"></i> Delete</a>
   </div>
 </div>
-<div class="united-item-meta">
+<div class="item-meta">
   <p>Aktiv | Last update on 16. September 2015 | 25 comments</p>
 </div>
 
-<div class="united-item">
+<div class="item">
   <div>
     <h2>Headline</h2>
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua...</p>
   </div>
-  <div class="united-buttons">
-    <a class="united-button mini icon-left main"><i class="icon ion-wrench"></i> Edit</a>
-    <a class="united-button mini icon-left negative"><i class="icon ion-close"></i> Delete</a>
+  <div class="buttons">
+    <a class="button mini icon-left main"><i class="icon ion-wrench"></i> Edit</a>
+    <a class="button mini icon-left negative"><i class="icon ion-close"></i> Delete</a>
   </div>
 </div>
-<div class="united-item-meta">
+<div class="item-meta">
   <p>Aktiv | Last update on 16. September 2015 | 25 comments</p>
 </div>
 
