--- a/elements/item.html
+++ b/elements/item.html
@@ -9,7 +9,7 @@ layout: page
       <h2>Headline</h2>
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua...</p>
     </div>
-    <div class="buttons">
+    <div class="buttons right no-padding no-wrap">
       <a class="button mini icon-left main"><i class="icon ion-wrench"></i> Edit</a>
       <a class="button mini icon-left negative"><i class="icon ion-close"></i> Delete</a>
     </div>
@@ -24,7 +24,7 @@ layout: page
     <h2>Headline</h2>
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua...</p>
   </div>
-  <div class="buttons">
+  <div class="buttons right no-padding no-wrap">
     <a class="button mini icon-left main"><i class="icon ion-wrench"></i> Edit</a>
     <a class="button mini icon-left negative"><i class="icon ion-close"></i> Delete</a>
   </div>
@@ -38,7 +38,7 @@ layout: page
     <h2>Headline</h2>
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua...</p>
   </div>
-  <div class="buttons">
+  <div class="buttons right no-padding no-wrap">
     <a class="button mini icon-left main"><i class="icon ion-wrench"></i> Edit</a>
     <a class="button mini icon-left negative"><i class="icon ion-close"></i> Delete</a>
   </div>
@@ -52,7 +52,7 @@ layout: page
     <h2>Headline</h2>
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua...</p>
   </div>
-  <div class="buttons">
+  <div class="buttons right no-padding no-wrap">
     <a class="button mini icon-left main"><i class="icon ion-wrench"></i> Edit</a>
     <a class="button mini icon-left negative"><i class="icon ion-close"></i> Delete</a>
   </div>
@@ -60,4 +60,3 @@ layout: page
 <div class="item-meta">
   <p>Aktiv | Last update on 16. September 2015 | 25 comments</p>
 </div>
-
