--- a/elements/button.html
+++ b/elements/button.html
@@ -68,6 +68,7 @@ layout: page
   <a class="button borderless full">Borderless Full</a>
   <a class="button rounded auto-width"><i class="icon ion-heart"></i></a>
   <a class="button rounded square-width"><i class="icon ion-heart"></i></a>
+  <a class="button static">Static</a>
 </p>
 <pre><code data-language="html">
   <a class="button rounded">Rounded</a>
@@ -76,6 +77,7 @@ layout: page
   <a class="button borderless full">Borderless Full</a>
   <a class="button rounded auto-width"><i class="icon ion-heart"></i></a>
   <a class="button rounded square-width"><i class="icon ion-heart"></i></a>
+  <a class="button static">Static</a>
 
 </code></pre>
 <div class="br"></div>
