fix demo form display on mobile.

--- a/elements/form.html
+++ b/elements/form.html
@@ -325,7 +325,7 @@ layout: page
 <div class="hr"></div><div class="br"></div>
 <h4 class="centered">Real form example</h4>
 <div class="br"></div>
-<form style="width: 800px; margin: 0 auto;">
+<form style="max-width: 90%; width: 800px; margin: 0 auto;">
   <div class="row">
     <div class="width-6">
       <div class="inline field">
